--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,8 +1,6 @@
 body {
-  margin: 0px;
-  padding: 0px;
-  font-family: 'Merienda', cursive;
-  font-family: 'Cinzel', serif;
+  margin: 0;
+  padding: 0;
   font-family: 'Berkshire Swash', cursive;
   background: url(/images/HallowBoard3.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -273,7 +271,7 @@ p {
   border-bottom-left-radius: 15px;
 }
 
-#start-form input[type=text]:focus,
+#start-form input[type=text]:focus
 {
 	-moz-box-shadow: 0 0 8px #605436;
 	-webkit-box-shadow: 0 0 8px #605436;
